Added apt-transport-https as a requirement

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
     update_cache: yes
   loop:
     - software-properties-common
+    - apt-transport-https
     - debconf-utils
     - debconf
     - gnupg
