--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_script:
   - cd tests/travis
 
 script:
+  - if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml -p ../../../; fi
   - ansible-playbook test.yml --syntax-check
   - ansible-playbook test.yml
-  - ansible-playbook test.yml > ansible_run.out
-  - ./idempotence.sh ansible_run.out
+  - ansible-playbook test.yml | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test pass' && exit 0) || (echo 'Idempotence test fail' && exit 1)
 
 notifications:
   webhooks: 
