Removed Vagrantfile and its tests

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,45 @@
 ---
-- hosts: all
+- name: Create containers inventory group
+  hosts: localhost
+  become: false
+  gather_facts: false
+  vars:
+    containers:
+      - xenial
+      - bionic
+  tasks:
+    - name: Build docker images
+      docker_image:
+        name: "{{ item }}"
+        tag: latest
+        path: "containers/{{ item }}"
+        force: false
+      changed_when: false
+      loop: "{{ containers }}"
+
+    - name: Run docker containers
+      docker_container:
+        name: "{{ item }}"
+        hostname: "{{ item }}"
+        image: "{{ item }}"
+        command: "/sbin/init"
+        recreate: no
+        state: started
+        privileged: true
+      loop: "{{ containers }}"
+
+    - name: Create inventory group on-the-fly
+      add_host:
+        name: "{{ item }}"
+        ansible_connection: docker
+        ansible_user: root
+        ansible_python_interpreter: python
+        groups: containers
+      changed_when: false
+      loop: "{{ containers }}"
+
+- name: Run jdk play
+  hosts: containers
   become: True
   roles:
-    - role: everproven.jdk
+    - role: ansible-jdk
