--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -5,5 +5,5 @@ ansible_connection = docker
 ansible_python_interpreter = python
 remote_tmp = /tmp/$USER
 host_key_checking = False
-roles_path = ../../../
+roles_path = ../../
 timeout = 10
