--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Install requirements
   apt: 
     name : "{{ item }}"
+    state: present
     update_cache: yes
   loop:
     - software-properties-common
@@ -24,6 +25,7 @@
 - name: Install Oracle JDK 1.8
   apt:
     name: "{{ item }}"
+    state: present
   ignore_errors: "{{ ansible_check_mode }}"
   loop:
     - oracle-java8-set-default
