--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - ansible-playbook test.yml --syntax-check
   - ansible-playbook test.yml --check
   - ansible-playbook test.yml
-  - ansible-playbook test.yml | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test pass' && exit 0) || (echo 'Idempotence test fail' && exit 1)
+  - ansible-playbook test.yml | grep -q 'changed=0.*failed=0' && (echo 'Role has passed the idempotence test' && exit 0) || (echo 'Role has failed the idempotence test' && exit 1)
 
 notifications:
   webhooks: 
